fix bug : 370 incorrect font color and spacing -> please see reference link for specs

--- a/src/assets/examples/sort-overview/sort-overview.component.css
+++ b/src/assets/examples/sort-overview/sort-overview.component.css
@@ -5,6 +5,6 @@
   text-align: left;
   margin: 0 auto;
 }
-.example-table td {
+.example-table th {
   padding-right: 40px;
 }
